...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    tools:context=".presentation.Activity.ShowAllDecksActivity">

    <Button
        android:id="@+id/startQuiz"
        android:layout_width="139dp"
        android:layout_height="78dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:background="@android:drawable/btn_default"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.111"
        app:layout_constraintStart_toEndOf="@+id/selectedDeck"
        app:layout_constraintTop_toBottomOf="@+id/showAllDeckList" />

    <Button
        android:id="@+id/createDeck"
        android:layout_width="148dp"
        android:layout_height="78dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:background="@android:drawable/btn_default"
...
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toStartOf="@+id/userDeck"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/username_icon" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/Back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"

        android:layout_marginTop="8dp"
        android:clickable="true"
...
